syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.aggregator.api;

option java_outer_classname = "TransactionApi";

service Transaction {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.Transaction"
      entity_type: "transaction"
      state: "io.aggregator.entity.TransactionState"
      events: [
        "io.aggregator.entity.TransactionCreated",
        "io.aggregator.entity.PaymentAdded"  //
      ]
    }
  };

  rpc CreateTransaction(CreateTransactionCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/transaction/create"
      body: "*"
    };
  }

  rpc AddPayment(AddPaymentCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/transaction/add-payment"
      body: "*"
    };
  }

  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse) {
    option (google.api.http) = {
      get: "/transaction/{transaction_id}/{service_code}/{account_from}/{account_to}"
    };
  }
}

message CreateTransactionCommand {
  string transaction_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  double transaction_amount = 5;
  string merchant_id = 6;
  string shop_id = 7;
  google.protobuf.Timestamp transaction_timestamp = 8;
}

message AddPaymentCommand {
  string transaction_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  string payment_id = 5;
}

message GetTransactionRequest {
  string transaction_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
}

message GetTransactionResponse {
  TransactionKey transaction_key = 1;
  string merchant_id = 2;
  string shop_id = 3;
  double transaction_amount = 4;
  google.protobuf.Timestamp transaction_timestamp = 5;
  string payment_id = 6;
}

message TransactionKey {
  string transaction_id = 1;
  string service_code = 2;
  string account_from = 3;
  string account_to = 4;
}
